
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FOLDER ;


 int CfgAddInt (int *,char*,int ) ;
 int FIFO_BUDGET ;
 int HUB_ARP_SEND_INTERVAL ;
 int IP_TABLE_EXPIRE_TIME ;
 int IP_TABLE_EXPIRE_TIME_DHCP ;
 int MAC_TABLE_EXPIRE_TIME ;
 int MAX_BUFFERING_PACKET_SIZE ;
 int MAX_HUB_LINKS ;
 int MAX_IP_TABLES ;
 int MAX_MAC_TABLES ;
 int MAX_SEND_SOCKET_QUEUE_NUM ;
 int MAX_SEND_SOCKET_QUEUE_SIZE ;
 int MAX_STORED_QUEUE_NUM ;
 int MEM_FIFO_REALLOC_MEM_SIZE ;
 int MIN_SEND_SOCKET_QUEUE_SIZE ;
 int QUEUE_BUDGET ;
 int SELECT_TIME ;
 int SELECT_TIME_FOR_NAT ;
 int STORM_CHECK_SPAN ;
 int STORM_DISCARD_VALUE_END ;
 int STORM_DISCARD_VALUE_START ;

void SiWriteGlobalParamsCfg(FOLDER *f)
{

 if (f == ((void*)0))
 {
  return;
 }

 CfgAddInt(f, "MAX_SEND_SOCKET_QUEUE_SIZE", MAX_SEND_SOCKET_QUEUE_SIZE);
 CfgAddInt(f, "MIN_SEND_SOCKET_QUEUE_SIZE", MIN_SEND_SOCKET_QUEUE_SIZE);
 CfgAddInt(f, "MAX_SEND_SOCKET_QUEUE_NUM", MAX_SEND_SOCKET_QUEUE_NUM);
 CfgAddInt(f, "SELECT_TIME", SELECT_TIME);
 CfgAddInt(f, "SELECT_TIME_FOR_NAT", SELECT_TIME_FOR_NAT);
 CfgAddInt(f, "MAX_STORED_QUEUE_NUM", MAX_STORED_QUEUE_NUM);
 CfgAddInt(f, "MAX_BUFFERING_PACKET_SIZE", MAX_BUFFERING_PACKET_SIZE);
 CfgAddInt(f, "HUB_ARP_SEND_INTERVAL", HUB_ARP_SEND_INTERVAL);
 CfgAddInt(f, "MAC_TABLE_EXPIRE_TIME", MAC_TABLE_EXPIRE_TIME);
 CfgAddInt(f, "IP_TABLE_EXPIRE_TIME", IP_TABLE_EXPIRE_TIME);
 CfgAddInt(f, "IP_TABLE_EXPIRE_TIME_DHCP", IP_TABLE_EXPIRE_TIME_DHCP);
 CfgAddInt(f, "STORM_CHECK_SPAN", STORM_CHECK_SPAN);
 CfgAddInt(f, "STORM_DISCARD_VALUE_START", STORM_DISCARD_VALUE_START);
 CfgAddInt(f, "STORM_DISCARD_VALUE_END", STORM_DISCARD_VALUE_END);
 CfgAddInt(f, "MAX_MAC_TABLES", MAX_MAC_TABLES);
 CfgAddInt(f, "MAX_IP_TABLES", MAX_IP_TABLES);
 CfgAddInt(f, "MAX_HUB_LINKS", MAX_HUB_LINKS);
 CfgAddInt(f, "MEM_FIFO_REALLOC_MEM_SIZE", MEM_FIFO_REALLOC_MEM_SIZE);
 CfgAddInt(f, "QUEUE_BUDGET", QUEUE_BUDGET);
 CfgAddInt(f, "FIFO_BUDGET", FIFO_BUDGET);
}
